# lelem

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  models.yml  pyproject.toml  requirements.txt  setup.cfg
.attic/act/: anthropic-actor  common.py  deepseek-completions-actor  langchain-gemini-actor  openai-responses-actor
.attic/conv/: common.py  deepseek-conv  langchain-deepseek-conv  openai-completions-conv
.attic/llm_actor/: conv
act/: anthropic-actor  deepseek-completions-actor  gemini-actor  langchain-gemini-actor  langchain-ollama-actor  openai-responses-actor  prolog
conv/: anthropic-conv  conv  deepseek-conv  gemini-conv  langchain-deepseek-conv  langchain-gemini-conv  langchain-ollama-conv  langchain-openai-conv  openai-responses-conv
lelem/: __init__.py  actor.py  common.py  conversation.py  lelem.py  models.py  prolog.py  questions.py
lelem/anthropic/: conversation.py
lelem/deepseek/: conversation.py
lelem/gemini/: conversation.py
lelem/langchain/: conversation.py
llm_actor/: __init__.py  actor.py  common.py  conversation.py  models.py  prolog.py  questions.py
llm_actor/anthropic/: conversation.py
llm_actor/deepseek/: conversation.py
prologs/: apprentice-system.1  commands.1  commands.2  fread.1  fread.2  fwrite.1  fwrite.2  intro.1  ls.1  ls.2  patches.1  programs.1  programs.3  workspace.1  workspace.2
sessions/: 001-lines-in-x1.c.q  002-fix-for-x1.c.q  003-@-commands.q  004-bolt.q  005-fwrite.q  006-ls.q  007-program.q  008-files.q  009-mcp.q  010-workspace.q  011-fix-x1.c.q  012-@-fix-x1.c.q
(+7 files in other folders)
