[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-actor"
version = "1.0.0"
dependencies = [
    "rich",
    "openai",
    "anthropic",
    "google-genai",
    "google-generativeai",
    "langchain-community",
    "langchain-openai",
    "langchain-google-genai",
    "langchain-deepseek",
    "langchain-ollama"
]
